syntax = "proto3";

package pb.unit.device;
option go_package = "github.com/byeol-i/battery-level-checker/pb/unit/device";

message Device {
    ID id = 1;
    Spec spec = 2;
}

message ID {
    string uuid = 1;
}

message Spec {
    string name = 1;
    string type = 2;
    string os = 3;
    string osVersion = 4;
    string appVersion = 5;
}
